--- a/src/scss/patria/_preguntas.scss
+++ b/src/scss/patria/_preguntas.scss
@@ -110,7 +110,7 @@
                     }
                 }
 
-                .respuesta{
+                .respuestaCaso{
                     padding: 2rem;
                     width: 80%;
                     background: v.$blanco;
