--- a/src/scss/layouts/_pag04.scss
+++ b/src/scss/layouts/_pag04.scss
@@ -216,7 +216,6 @@
         }
 
         .circulos-info{
-
             display: none;
             background: v.$blanco;
             width: 30rem;
@@ -225,7 +224,7 @@
             margin-bottom: 1rem;
             text-align: center;
             font-size: 1.4rem;
-            padding: 2.2rem;
+            padding: 3rem;
             transition: all .3s ease-in-out;
 
             @include m.escritorio{
@@ -342,25 +341,25 @@
                 justify-content: center;
                 align-items: center;
 
-                &#circulo7{
-                    flex-direction: column;
-                    padding: 2rem;
-                    line-height: 1;
+                // &#circulo7{
+                //     flex-direction: column;
+                //     padding: 2rem;
+                //     line-height: 1;
 
-                    h4{
-                        font-size: 1.2rem;
-                        color: v.$colorFuente;
-                    }
+                //     h4{
+                //         font-size: 1.2rem;
+                //         color: v.$colorFuente;
+                //     }
 
-                    ul{
-                        font-size: 1rem;
-                        text-align: justify;
+                //     ul{
+                //         font-size: 1rem;
+                //         text-align: justify;
 
-                        @include m.escritorio{
-                            font-size: 1.4rem;
-                        }
-                    }
-                }
+                //         @include m.escritorio{
+                //             font-size: 1.4rem;
+                //         }
+                //     }
+                // }
             }
 
             h1{
